<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.UpdateNoteActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        >


        <TextView

            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="30dp"
            android:paddingLeft="20dp"
            android:text="@string/update"
            android:textAlignment="viewStart"
            android:textColor="@color/dark"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:layout_gravity="start"
            android:id="@+id/tvupdatetitulo"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/titulo"
            android:inputType="text"
            android:gravity="left"
            android:padding="15dp"


            />

        <EditText
            android:id="@+id/tvupdatecontenido"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:ems="10"
            android:hint="@string/contenido"
            android:inputType="text"
            android:padding="15dp"
            android:layout_marginBottom="10dp"

            />



        <Button
            android:id="@+id/btupdate"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:backgroundTint="@color/dark"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/btactualizar"
            app:cornerRadius="12dp"
            android:layout_gravity="center"
            />



    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>