<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.ViewNoteActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        >

        <!-- <ImageView
              android:id="@+id/back_home"
              android:layout_width="76dp"
              android:layout_height="50dp"
              android:layout_marginLeft="20dp"
              android:layout_marginTop="25dp"
              app:srcCompat="@drawable/icon" />-->

        <TextView

            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="30dp"
            android:paddingLeft="20dp"
            android:text="@string/visualizacion"
            android:textAlignment="viewStart"
            android:textColor="@color/dark"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_gravity="start"
            android:id="@+id/tvvistitulo"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/titulo"
            android:inputType="text"
            android:gravity="left"
            android:padding="15dp"


            />

        <TextView
            android:id="@+id/tvviscontenido"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:ems="10"
            android:hint="@string/contenido"
            android:inputType="text"
            android:padding="15dp"
            android:layout_marginBottom="10dp"

            />

<Button
    android:id="@+id/back"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/regresar"
    android:layout_marginLeft="25dp"
    />




    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>